Mon, 11 Dec 2006 16:11:54 +0100 <thp@perli.net>
        * src/gpodder/gpodder.py: Don't treat already downloaded but 
          deleted episodes as "new" when clicking on "download new" - 
          thanks to Seth Remington for the suggestion
        * bin/gpodder: Pushed release date + version

Mon, 11 Dec 2006 15:02:56 +0100 <thp@perli.net>
        * TODO: Added release goals for gPodder 0.9.0

Mon, 11 Dec 2006 01:23:31 +0100 <thp@perli.net>
        * src/gpodder/libplayers.py: Fixed a bug when there are non-
          dotdesktop files in /usr/share/applications/ - thanks to Joel 
          Calado for reporting this bug on gpodder-devel :)
        * bin/gpodder: Pushed release date + version

Sat,  9 Dec 2006 03:04:06 +0100 <thp@perli.net>
        * src/gpodder/gpodder.py: Fixed a bug that prevented opening the 
          gPodder preferences window

Sat,  9 Dec 2006 02:56:52 +0100 <thp@perli.net>
        * src/gpodder/gpodder.py: Massive cleanup, this might introduce 
          new bugs from refactoring; please report if you find any
        * src/gpodder/liblocaldb.py: Fix get_filename_by_podcast() function 
          to check for errors in return value of get_channel()
        * bin/gpodder: pushed version + release date
        * data/gpodder.glade: Removed the downloaded episodes tab and 
          added a "Play" button to the gPodderEpisode window (if the episode
          has already been downloaded

Sat,  9 Dec 2006 01:38:35 +0100 <thp@perli.net>
        * src/gpodder/liblocdbreader.py: Read mimetype + calc filesize
        * src/gpodder/liblocdbwriter.py: Write out mimetype
        * src/gpodder/libpodcasts.py: re-design getItemsModel to new 
          function items_liststore(), added get_all_episodes() function 
          to retrieve episodes both in the feed and in the localdb; removed 
          getActiveByUrl() and replaced with find_episode(); added new 
          function calculate_filesize() to podcastItem