@@ -2,8 +2,9 @@
  === Release Goals for gPodder 0.9.0 ===
 
  [ ]  Implement support for filesystem-based MP3 players
- [ ]  Change "Download" button to "Play" on downloaded podcasts
+ [X]  Change "Download" button to "Play" on downloaded podcasts
  [ ]  Add support for importing gPodder 0.8.0 downloaded episodes
+ [ ]  Re-structure main menu for better usability
 
  === Todo List for gPodder post-0.9.0 ===
 
