@@ -1,3 +1,10 @@
+Wed, 13 Dec 2006 00:10:11 +0100 <thp@perli.net>
+        * src/gpodder/gpodder.py: Add support for "Play" button in main 
+          gpodder dialog (depending on which episode is selected)
+        * data/gpodder.glade: Add support for "Play" button (see above)
+        * TODO: Release goals for 0.8.0 updated
+        * bin/gpodder: Updated release date + version
+
 Mon, 11 Dec 2006 16:11:54 +0100 <thp@perli.net>
         * src/gpodder/gpodder.py: Don't treat already downloaded but 
           deleted episodes as "new" when clicking on "download new" - 
